--- a/myStyle.css
+++ b/myStyle.css
@@ -2,7 +2,7 @@
 body{
 background-color: #ffffcc;
 }
-
+/*this div should center whole page + determine size of page*/
 #centeringDiv {
   margin: auto;
   width: 800px;
@@ -11,12 +11,14 @@ background-color: #ffffcc;
   position: relative;
 }
 
+/*in this div are: navigation menu and logo*/
 #topBar{
 width: 800px;
 height: 150px;
 background-color: #ffffcc;
 }      
 
+/*logo*/
 #logo{
 width: 796px;
 height: 71px;
@@ -28,6 +30,7 @@ width:796px;
 height: 71px;
 }
 
+/*navigacni menu*/
 #navigationMenu{
 width:800px;
 height: 75px;
@@ -65,6 +68,7 @@ height: 75px;
 	color: green;
 }
 
+/*div ve kterem je text a vlastne celkovy obsah stranky*/
 #contentBar{
 width: 796px;
 height: 526px;
@@ -74,7 +78,8 @@ border-top-left-radius: 15px;
 border: 2px solid black;
 overflow: auto;
 }
-      
+
+/*styl textu v hlavnim baru*/      
 #contentBar p.content {
 margin-left: 15px; 
 margin-right: 15px;
