--- a/styl.css
+++ b/styl.css
@@ -35,6 +35,7 @@ article {
     margin: 0 auto;
     max-width: 960px;
     padding: 50px 50px 10px 50px;
+    color: white;
 }
 
 article h1,
@@ -43,7 +44,7 @@ article h3,
 article h4,
 article h5,
 article h6 {
-    color: #03191E;
+    color: white;
     padding: 10px 0;
 }
 
@@ -207,4 +208,21 @@ footer a {
 
 #reference a:hover {
     text-decoration: none;
+}
+
+
+/* Stylings of about page */
+#my-name {    
+    width: 100%;
+}
+
+#my-name .image-part{
+    width: 100%;
+    height: 100%;
+    background-image: url('./images/P5150228.JPG');
+    background-size: cover;
+    /* makes it cover the entire element */
+    background-position: center;
+    /* centers the image */
+    background-repeat: no-repeat;
 }
